[package]
name = "chromedriver-api"
description = "This API is designed for interacting with chromedriver (browser auto clicker)"
keywords = ["chromedriver", "API", "chrome", "browser", "clicker"]
categories = ["development-tools"]
version = "0.1.8"
license = "MIT"
authors = ["Bulat Sh. <t.me/fuderis>"]
repository = "https://github.com/fuderis/rs-chromedriver-api"
readme = "README.md"
edition = "2024"

[dependencies]
macron = { version = "0.1.9", features = ["derive", "collections"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
